--- a/src/app/match-information/match-information.component.html
+++ b/src/app/match-information/match-information.component.html
@@ -2,13 +2,13 @@
   <i class="fa-solid fa-arrow-left"></i>
 </button>
 
-<div align="center">
-  <h1>Bet Builter Fixture</h1>
+<div >
+  <h3 class="buileder">Make It A Bet Builder?</h3>
 </div>
 
 <div class="container" align="center">
-  <div style="width: 25%; background-color: red; color: white;">{{headerDate | date: 'MMM dd, YYYY, h:mm'}} </div>
-  <div style="width: 25%; background-color: black; color: white;">{{matchName}}</div>
+  <div style="width: 25%; background-color: red; color: white; padding-top: 1%; padding-bottom: 1%;">{{headerDate | date: 'MMM dd, YYYY, h:mm'}} </div>
+  <div style="width: 25%; background-color: black; color: white; padding-top: 1%; padding-bottom: 1%;">{{matchName}}</div>
 </div>
 
 <div class="container2">
