--- a/src/app/match-home/match-home.component.html
+++ b/src/app/match-home/match-home.component.html
@@ -12,7 +12,7 @@
         <div *ngFor="let match of filteredMatches" align="center">
             <h3>{{ match.Country }} {{match.LeagueName}}</h3>
             <ul style="padding-left: 0px;" *ngFor="let match of filteredMatches"
-                (click)="onRowClick(match.MatchId, match.MatchDate, match.MatchName)">
+                (click)="onRowClick(match.Country, match.LeagueName, match.MatchDate, match.MatchName)">
                 {{ match.Team1Name }} {{match.KickOffUtc.toLocaleString() | date: 'HH:mm' }} {{match.Team2Name}}
                 <hr>
             </ul>
@@ -22,6 +22,6 @@
 
 
 <div *ngIf="showMatchDetails">
-    <app-match-information [matchId]="passingMatchId" [headerDate]="passingDate" [matchName]="passingMatchName"
+    <app-match-information [leagName]="leagueName" [headerDate]="passingDate" [matchName]="passingMatchName"
         (backEvent)="goToHome()"></app-match-information>
 </div>
